# miam

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  PERFORMANCE_AUDIT.md  README.md  docker-compose.prod.yml  docker-compose.yml  gen_ref_pages.py  index.html  objects.inv
.claude/: settings.json
.github/workflows/: checks.yml  docker-publish.yml  publish_mkdocs.yaml  tests.yml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/.github/workflows/: precommit.yml  tests.yml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_recipe_shares.py  2ae7b4020779_.py  a80f10581c30_initial_schema.py
backend/scripts/: entrypoint.py  test_connexion_db.py
backend/src/miam/: __init__.py  app.py
backend/src/miam/api/: __init__.py  deps.py  handlers.py  main.py
backend/src/miam/api/routes/: auth.py  export.py  helpers.py  images.py  import_recipes.py  recipes.py  root.py  shares.py
backend/src/miam/domain/: __init__.py  entities.py  exceptions.py  ports_primary.py  ports_secondary.py  repositories.py  schemas.py  services.py
backend/src/miam/infra/: __init__.py  exporter.py  exporter_markdown.py  exporter_word.py  google_auth.py  image_storage.py  importer_instagram.py  instagram_post_exampel.json  jwt_handler.py  repositories.py
backend/src/miam/infra/db/: __init__.py  base.py  session.py
backend/tests/api/: conftest.py  test_auth.py  test_export.py  test_helpers.py  test_images.py  test_import.py  test_recipes.py  test_root.py
backend/tests/domain/: test_auth_service.py  test_entities.py  test_schemas.py  test_services.py
backend/tests/infra/: conftest.py  test_exporter_markdown.py  test_exporter_word.py  test_google_auth.py  test_image_storage.py  test_importer_instagram.py  test_jwt_handler.py  test_markdown_exporter.py  test_repository.py
docs/: README.md  mkdocs.yml  pyproject.toml
docs/docs/: index.md
frontend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  components.json  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/.lovable/: plan.md
frontend/public/: config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AppearanceSheet.tsx  BeaverCatchGame.tsx  CartSheet.tsx  FilterBar.tsx  HeroSection.tsx  MobileAddButton.tsx  MobileBottomBar.tsx  MobileHeader.tsx  MobileSearchOverlay.tsx  PendingSharesSheet.tsx  ProtectedRoute.tsx  RecipeCard.tsx  RecipeDetail.tsx  RecipeExport.tsx  RecipeForm.tsx  RecipeImportInstagram.tsx  RecipeImportJSON.tsx  RecipeImportOCR.tsx  SearchBar.tsx  ShareDialog.tsx  SortableCartIngredientItem.tsx  SortableIngredientItem.tsx  SwipeBack.tsx  UserMenu.tsx
frontend/src/contexts/: AuthContext.tsx  CartContext.tsx  CatalogFilterContext.tsx  ThemeContext.tsx
frontend/src/data/: recipes.ts
frontend/src/hooks/: use-auth-image.ts  use-mobile.tsx  use-recipes.ts  use-scroll-direction.ts  use-shake.ts  use-shares.ts
frontend/src/lib/: api.ts  recipe-to-markdown.ts
frontend/src/pages/: AddRecipePage.tsx  CartPage.tsx  CatalogPage.tsx  CreateRecipe.tsx  CreateRecipePage.tsx  ExportPage.tsx  ImportInstagramPage.tsx  ImportJSONPage.tsx  ImportOCRPage.tsx  Index.tsx  LoginPage.tsx  NotFound.tsx  RecipeDetail.tsx  RecipeDetailPage.tsx  SettingsPage.tsx  SharesPage.tsx
frontend/supabase/: config.toml
locust/: README.md  locustfile.py  pyproject.toml
locust/helpers/: factories.py  shared_state.py
lovable/: tailwind.config.ts
lovable/src/: index.css
lovable/src/components/: FilterBar.tsx  RecipeDetail.tsx  RecipeForm.tsx  (+2 more)
lovable/supabase/: config.toml
reference/: SUMMARY.html  index.html
reference/api/: deps.html  index.html  main.html
reference/domain/: entities.html  index.html  ports_primary.html  ports_secondary.html  schemas.html  services.html
reference/infra/: exporter_markdown.html  exporter_word.html  google_auth.html  image_storage.html  importer_instagram.html  index.html  jwt_handler.html  repositories.html
search/: search_index.json
(+16 files in other folders)
