[project]
name = "miam"
version = "0.0.1"
description = "miam"
authors = [
  {name = "Louis Stefanuto", email = "me@email.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.0.1",
  "pydantic-settings>=2.0.0",
  "loguru>=0.7.3",
  "fastapi[standard]>=0.115.12",
  "sqlalchemy>=2.0.46",
  "alembic>=1.18.1",
  "psycopg2-binary>=2.9.11",
  "python-docx>=1.2.0",
]

[project.optional-dependencies]
dev = [
  "ipdb>=0.13.11",
  "pytest>=7.2.0",
  "pytest-cov>=6.1.0",
  "ruff>=0.11.2",
  "mypy>=1.18.2",
  "ty>=0.0.17",
]

[tool.pytest.ini_options]
addopts = "--cov=src/miam"

[tool.coverage.report]
skip_empty = true

[tool.mypy]
python_version = "3.13"
mypy_path = ["$MYPY_CONFIG_FILE_DIR"]
strict = true
exclude = ["docs/"]
plugins = ["pydantic.mypy"]

[tool.ruff]
extend-include = ["*.ipynb"]  # lint and format jupyer notebooks
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (Error)
    "F",   # Pyflakes
    "I",   # isort – sort imports like isort (https://github.com/astral-sh/ruff/issues/8926)
    "D",   # pydocstyle – lint existing docstrings (google convention, no types in docstrings)
    # "DOC", # pydoclint (sill in preview)
    # "ANN", # enforce type annotations
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "FAST",
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "Q",   # flake8-quotes
    "PIE", # flake8-pie
    "LOG", # flake8-logging
    "PT", # flake8-pytest-style
]
ignore = [
    "D1",  # don't require docstrings, only lint existing ones
    "E501" # checks for lines that exceed the specified maximum character length
]

[tool.ruff.lint.per-file-ignores]
"alembic/**" = [
    "D",     # ignore: docstring rules for auto-generated migrations
    "UP",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
packages = ["src/miam"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
